@@ -1,0 +1,16 @@
+<?xml version="1.0"?>
+<doc>
+    <assembly>
+        <name>test-xml-041</name>
+    </assembly>
+    <members>
+        <member name="T:EntryPoint">
+            <summary />
+        </member>
+        <member name="T:EntryPoint.A">
+            <summary>
+            <see cref="M:EntryPoint.A.Decide(System.Int32)"/>
+            </summary>
+        </member>
+    </members>
+</doc>
