@@ -1,0 +1,18 @@
+// Compiler options: -doc:xml-042.xml -warnaserror -warn:4
+/// <summary />
+public class EntryPoint
+{
+  static void Main()
+  {
+  }
+
+  /// <summary>
+  /// <see cref="Decide(int)" />
+  /// </summary>
+  private class A
+  {
+    public virtual void Decide(int a)
+    {
+    }
+  }
+}
